fixed text wrapping on video cards and comments

--- a/src/scss/_preview.scss
+++ b/src/scss/_preview.scss
@@ -34,5 +34,4 @@
 .preview-description {
   color: $text-color-secondary;
   font-size: $preview-description-font-size;
-  word-break: break-all;
 }
