--- a/src/scss/_video.scss
+++ b/src/scss/_video.scss
@@ -22,7 +22,6 @@
 
 .video-info-container {
   max-width: $video-max-width;
-  word-break: break-all;
 }
 
 .video-title {
